--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ anyio==4.11.0
 asgiref==3.10.0
 certifi==2025.10.5
 distro==1.9.0
+dj-database-url==3.0.1
 Django==5.2.7
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -11,6 +13,8 @@ idna==3.11
 jiter==0.11.1
 lxml==6.0.2
 openai==2.6.1
+packaging==25.0
+psycopg2-binary==2.9.11
 pydantic==2.12.3
 pydantic_core==2.41.4
 python-docx==1.2.0
@@ -20,3 +24,4 @@ sqlparse==0.5.3
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+whitenoise==6.11.0
