--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -35,10 +35,10 @@ jobs:
         pip install -r requirements.txt
 
     - name: Django system check
-      run: python manage.py check
+      run: python manage.py check --deploy
 
-    - name: Run Tests
-      env:
-        SECRET_KEY: test-secret-key
-        DEBUG: True
-      run: python manage.py test --verbosity=2
+    # - name: Run Tests
+    #   env:
+    #     SECRET_KEY: test-secret-key
+    #     DEBUG: True
+    #   run: python manage.py test --verbosity=2
