--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.11.0
 asgiref==3.10.0
 certifi==2025.10.5
+charset-normalizer==3.4.4
 distro==1.9.0
 dj-database-url==3.0.1
 Django==5.2.7
@@ -14,14 +15,20 @@ jiter==0.11.1
 lxml==6.0.2
 openai==2.6.1
 packaging==25.0
+pillow==12.0.0
 psycopg2-binary==2.9.11
 pydantic==2.12.3
 pydantic_core==2.41.4
+PyPDF2==3.0.1
 python-docx==1.2.0
 python-dotenv==1.2.1
+python-pptx==1.0.2
+requests==2.32.5
 sniffio==1.3.1
 sqlparse==0.5.3
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.5.0
 whitenoise==6.11.0
+xlsxwriter==3.2.9
