--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ charset-normalizer==3.4.4
 distro==1.9.0
 dj-database-url==3.0.1
 Django==5.2.7
+django-appconf==1.2.0
+django-imagekit==6.0.0
+exceptiongroup==1.3.0
 gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
@@ -15,6 +18,7 @@ jiter==0.11.1
 lxml==6.0.2
 openai==2.6.1
 packaging==25.0
+pilkit==3.0
 pillow==12.0.0
 psycopg2-binary==2.9.11
 pydantic==2.12.3
